# TruthWeave

./: .gitignore  AGENTS.md  Makefile  PaperOps Template v0.md  README.ja.md  README.md  Snakefile  pyproject.toml
.codex/skills/paperops-build-assets/: SKILL.md
.codex/skills/paperops-check/: SKILL.md
.codex/skills/truthweave-check/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
conf/: base.yaml  pipeline.yaml  repo_contract.yml
conf/base/: base.yaml
conf/exp/: example.yaml
paper/auto/: MANIFEST.json  variables.tex
papers/demo_paper/: main.tex  refs.bib  truthweave.yml
papers/example/: main.tex  paperops.yml  refs.bib
src/paperops/: cli.py  papers.py  registry.py  runner.py  snapshot.py
src/paperops/analysis/: aggregate.py
src/paperops/checks/: __init__.py  check_no_manual_numbers.py  check_paper_freshness.py  check_run_integrity.py  check_structure.py  models.py
src/paperops/experiments/: __init__.py  example_experiment.py
src/paperops_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/truthweave/: cli.py  papers.py  registry.py  runner.py  snapshot.py  utils.py
src/truthweave/analysis/: figures.py
src/truthweave/checks/: __init__.py  check_no_manual_numbers.py  check_paper_freshness.py  check_run_integrity.py  check_structure.py
src/truthweave/experiments/: __init__.py  (+1 more)
src/truthweave_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_checks.py  test_makefile_analysis.py  test_papers.py  test_scaffold_analysis_dataset.py
